--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
-    "@starknet-react/core": "2.1.5",
-    "@tanstack/react-query": "5.15.0",
+    "@starknet-react/core": "2.2.4",
+    "@tanstack/react-query": "5.18.1",
     "dotenv": "^16.3.1",
-    "framer-motion": "^10.16.16",
+    "framer-motion": "11.0.3",
     "next": "^14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
-    "react-toastify": "^9.1.3",
+    "react-toastify": "10.0.4",
     "react-type-animation": "^3.2.0",
     "starknet": "^5.24.3",
     "starknetkit": "^1.0.22",
@@ -42,7 +42,7 @@
     "@types/react-dom": "18.2.18",
     "@typescript-eslint/eslint-plugin": "6.16.0",
     "@typescript-eslint/parser": "6.16.0",
-    "autoprefixer": "10.4.16",
+    "autoprefixer": "10.4.17",
     "eslint": "8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -53,11 +53,11 @@
     "eslint-plugin-prettier": "5.1.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.8.0",
-    "husky": "^8.0.3",
+    "husky": "9.0.10",
     "lint-staged": "^15.2.0",
-    "postcss": "8.4.32",
+    "postcss": "8.4.35",
     "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "0.5.9",
-    "tailwindcss": "3.4.0"
+    "prettier-plugin-tailwindcss": "0.5.11",
+    "tailwindcss": "3.4.1"
   }
 }
