--- a/package.json
+++ b/package.json
@@ -20,20 +20,25 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "5.15.9",
+    "@mui/material": "5.15.9",
     "@nextui-org/react": "^2.2.9",
+    "@reduxjs/toolkit": "^2.1.0",
     "@starknet-react/core": "2.2.4",
-    "@tanstack/react-query": "5.18.1",
+    "@tanstack/react-query": "5.20.1",
     "dotenv": "^16.3.1",
     "framer-motion": "11.0.3",
     "next": "^14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
+    "react-redux": "^9.1.0",
     "react-toastify": "10.0.4",
     "react-type-animation": "^3.2.0",
     "starknet": "^5.24.3",
     "starknetkit": "^1.0.22",
-    "timeago.js": "^4.0.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
