--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-type-animation": "^3.2.0",
     "starknet": "^5.24.3",
     "starknetkit": "^1.0.22",
+    "timeago.js": "^4.0.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
